<resources>
    <string name="app_name" translatable="false">octochat</string>
    <string name="app_banner" translatable="false">App_banner</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="activity_create" translatable="false">CreateUserProfile</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="fieldsRequired">"Email and passwords are required"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be at least 8 characters</string>
    <string name="login_header_text">Login</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_no_username">"Please enter your email"</string>
    <string name="create_failed">"Create failed"</string>
    <string name="sign_up">"Sign Up"</string>
    <string name="sign_up_cancel">"Cancel"</string>
    <string name="title_activity_login2" translatable="false">LoginActivity2</string>
    <string name="no_chats_yet">No chats yet</string>
    <string name="message">Message</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="settings_change_password">Change password</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_change_password_current_password">Current password</string>
    <string name="settings_change_password_new_password">New password</string>
    <string name="settings_change_password_new_password_again">Enter new password again</string>
    <string name="settings_change_password_save">Save</string>
    <string name="settings_change_password_cancel">Cancel</string>
    <string name="settings_toast_password_mismatch">Passwords does not match</string>
    <string name="settings_toast_password_too_short">Passwords length is too short - a password length of 8 or more is required</string>
    <string name="settings_toast_password_successful">Password updated</string>
    <string name="settings_general_error">Something went wrong - please try again</string>
    <string name="type_a_message">Type a message</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="registration_signup_header_text">Register new user</string>
    <string name="registration_signup_failed">Registration failed</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign in</string>
    <string name="recover_password">Recover Password</string>
    <string name="sign_in_private">Sign in Private</string>
    <string name="your_profile">Your profile</string>
    <string name="profile">Profile</string>
    <string name="block">Block</string>
    <string name="friends">Friends</string>
    <string name="add_friend">Add friend</string>
    <string name="remove_friend">Remove friend</string>
    <string name="add">Add</string>
    <string name="start_chat">Start chat</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="start_a_group_chat">Start a group chat</string>
    <string name="s_added_as_friend">%1$s added as friend!</string>
    <string name="could_not_add_s_as_friend">Could not add %1$s as friend</string>
    <string name="select_more_than_one">Select more than one friend to start a group chat</string>
</resources>