<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/grad"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/changePasswordFragmentHeadText"
            android:layout_width="235dp"
            android:layout_height="75dp"
            android:layout_marginTop="50dp"
            android:text="@string/settings_change_password"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/currentPasswordInput"
            android:layout_width="235dp"
            android:layout_height="45dp"
            android:layout_marginTop="50dp"
            android:autoText="false"
            android:ems="10"
            android:hint="@string/settings_change_password_current_password"
            android:inputType="textPersonName"
            android:password="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changePasswordFragmentHeadText" />

        <EditText
            android:id="@+id/newPasswordInput"
            android:layout_width="235dp"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/settings_change_password_new_password"
            android:inputType="textPersonName"
            android:password="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentPasswordInput" />

        <EditText
            android:id="@+id/newPasswordConfirmInput"
            android:layout_width="235dp"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/settings_change_password_new_password_again"
            android:inputType="textPersonName"
            android:password="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordInput" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="50dp"
            android:background="#FFFFFF"
            android:text="@string/settings_change_password_save"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordConfirmInput" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="88dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/grad"
            android:text="@string/settings_change_password_cancel"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordConfirmInput" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>